[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/LoginScreen.gd" type="Script" id=1]
[ext_resource path="res://Platinum Beat BTN Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="StreamTexture" id=5]
resource_local_to_scene = true
flags = 4
load_path = "res://.import/panel2.png-b5936aca8f6176bb77abd27c7a2f57eb.stex"

[sub_resource type="StreamTexture" id=6]
flags = 4
load_path = "res://.import/quit button.png-3c8eae6979ee9578987cb14901d84024.stex"

[sub_resource type="DynamicFont" id=1]
size = 42
extra_spacing_bottom = -10
extra_spacing_char = 2
extra_spacing_space = 2
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 4 )

[sub_resource type="StreamTexture" id=7]
flags = 4
load_path = "res://.import/loginbutton.png-897587c6a8d948870a8848e0f95c5d1a.stex"

[node name="Login Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 360.0, 571.0 ],
"_edit_vertical_guides_": [ 640.0 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
self_modulate = Color( 0.839216, 0.25098, 0.133333, 1 )
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.745098, 0.141176, 0.141176, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Panel2" type="Sprite" parent="."]
position = Vector2( 639, 360 )
scale = Vector2( 1.12917, 1.12917 )
texture = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="QuitButtonFunc" type="Button" parent="."]
modulate = Color( 0.737255, 0.560784, 0.560784, 0 )
self_modulate = Color( 0, 0, 0, 0 )
anchor_left = -0.063
anchor_top = 0.028
anchor_right = -0.063
anchor_bottom = 0.028
margin_left = 1219.64
margin_top = 647.84
margin_right = 1352.64
margin_bottom = 692.84
__meta__ = {
"_edit_lock_": true
}

[node name="QuitButton" type="Sprite" parent="."]
position = Vector2( 1207, 692 )
scale = Vector2( 0.514999, 0.514999 )
texture = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Welcome" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 201.0
margin_top = 128.0
margin_right = 706.0
margin_bottom = 199.0
custom_fonts/font = SubResource( 1 )
text = "WELCOME
"
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 218.0
margin_top = 193.0
margin_right = -578.0
margin_bottom = -145.0
__meta__ = {
"_edit_lock_": true
}

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_right = 484.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
__meta__ = {
"_edit_lock_": true
}

[node name="Username" type="Label" parent="VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
margin_top = 34.0
margin_right = 484.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 2 )
text = "USERNAME"
__meta__ = {
"_edit_lock_": true
}

[node name="Usernametype" type="LineEdit" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 440.0
margin_bottom = 91.0
rect_min_size = Vector2( 440, 20 )
size_flags_horizontal = 0
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 95.0
margin_right = 484.0
margin_bottom = 145.0
rect_min_size = Vector2( 0, 50 )
size_flags_vertical = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Password" type="Label" parent="VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 149.0
margin_right = 484.0
margin_bottom = 175.0
custom_fonts/font = SubResource( 3 )
text = "PASSWORD"
__meta__ = {
"_edit_lock_": true
}

[node name="Passwordtype" type="LineEdit" parent="VBoxContainer"]
margin_top = 179.0
margin_right = 440.0
margin_bottom = 206.0
rect_min_size = Vector2( 440, 0 )
size_flags_horizontal = 0
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
margin_top = 210.0
margin_right = 484.0
margin_bottom = 235.0
rect_min_size = Vector2( 0, 25 )
size_flags_vertical = 0
__meta__ = {
"_edit_lock_": true
}

[node name="error_label_msg" type="Label" parent="VBoxContainer"]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
margin_top = 239.0
margin_right = 173.0
margin_bottom = 253.0
rect_min_size = Vector2( 126, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color = Color( 0.984314, 0.0431373, 0.0431373, 1 )
text = "Player Credential is invalid."
__meta__ = {
"_edit_lock_": true
}

[node name="error_username" type="Label" parent="VBoxContainer"]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
margin_top = 257.0
margin_right = 484.0
margin_bottom = 271.0
text = "- Username is incorrect."
__meta__ = {
"_edit_lock_": true
}

[node name="error_password" type="Label" parent="VBoxContainer"]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
margin_top = 275.0
margin_right = 484.0
margin_bottom = 289.0
text = "- Password is incorrect."
__meta__ = {
"_edit_lock_": true
}

[node name="error_not_found" type="Label" parent="VBoxContainer"]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
margin_top = 293.0
margin_right = 484.0
margin_bottom = 307.0
text = "- Username and Password not found."
__meta__ = {
"_edit_lock_": true
}

[node name="Loginbutton" type="Sprite" parent="."]
position = Vector2( 435, 545 )
scale = Vector2( 0.381929, 0.378031 )
texture = SubResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="Button" type="Button" parent="."]
modulate = Color( 0, 0, 0, 0 )
margin_left = 321.0
margin_top = 510.0
margin_right = 545.0
margin_bottom = 555.0
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="QuitButtonFunc" to="." method="_on_QuitButtonFunc_pressed"]
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
